# kv-dict

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/codeql/: codeql-config.yml
.github/workflows/: _codeql.yml  _dist.yml  _pypi.yml  _release.yml  _test.yml  bump.yml  ci.yml  release.yml
docs/: design.md
examples/: __init__.py  async_bridge_poc_example.py  remote_mapping_in_memory_example.py  remote_mapping_nats_example.py  remote_mapping_postgres_example.py  remote_mapping_redis_example.py  remote_mapping_redis_pogo_example.py
kv_dict/: __init__.py  __main__.py  async_bridge_poc.py
kv_dict/backends/: __init__.py  in_memory.py  nats.py  postgres.py  protocol.py  redis.py
kv_dict/key_mapping/: __init__.py  mapper.py  nested.py
kv_dict/mappings/: __init__.py  remote.py
tests/: test_async_bridge_poc.py  test_in_memory_backend.py  test_key_mapper_and_nested.py  test_nats_backend.py  test_package.py  test_postgres_backend.py  test_redis_backend.py  test_remote_mapping.py
